# python-project-lvl2

./: Makefile  README.md  codecov.yml  pyproject.toml  setup.cfg
.github/workflows/: python3.9-push.yml
gendiff/: __init__.py  __main__.py  diff_log.py  generate_diff.py  lib.py  parser.py
gendiff/renderers/: log_like.py  plain.py  stylish.py  utils.py
tests/: conftest.py  diff_log_test.py  gendiff_test.py  parser_test.py
tests/fixtures/output/log-like/: flat-diff.txt
